Fix .preview-container not being aligned correctly, causing images to flash on screen briefly in the wrong place.

--- a/resources/main.css
+++ b/resources/main.css
@@ -112,6 +112,9 @@ ul {
 }
 
 .image-container, .preview-container {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     user-select: none;
